// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Literals Left variant 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (variant Left (literal (nat 1) (\\"literals.test.ts\\" 78)) (\\"literals.test.ts\\" 78))
            storage_type ((variant ((Left \\"nat\\") (Right \\"int\\")) (Some ((\\"Left\\") (\\"Right\\"))) (\\"\\" -1)))
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals Left variant 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   (or (nat %Left) (int %Right));\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"or\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"nat\\",
                            \\"annots\\": [
                                \\"%Left\\"
                            ]
                        },
                        {
                            \\"prim\\": \\"int\\",
                            \\"annots\\": [
                                \\"%Right\\"
                            ]
                        }
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TVariant(Left = sp.TNat, Right = sp.TInt).layout((\\\\\\"Left\\\\\\", \\\\\\"Right\\\\\\")))\\\\n    self.init(Left(1))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals Right variant 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (variant Right (literal (int 1) (\\"literals.test.ts\\" 78)) (\\"literals.test.ts\\" 78))
            storage_type ((variant ((Left \\"nat\\") (Right \\"int\\")) (Some ((\\"Left\\") (\\"Right\\"))) (\\"\\" -1)))
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals Right variant 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   (or (nat %Left) (int %Right));\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"or\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"nat\\",
                            \\"annots\\": [
                                \\"%Left\\"
                            ]
                        },
                        {
                            \\"prim\\": \\"int\\",
                            \\"annots\\": [
                                \\"%Right\\"
                            ]
                        }
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TVariant(Left = sp.TNat, Right = sp.TInt).layout((\\\\\\"Left\\\\\\", \\\\\\"Right\\\\\\")))\\\\n    self.init(Right(1))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals address 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (literal (address tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN) (\\"literals.test.ts\\" 78))
            storage_type (\\"address\\")
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals address 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   address;\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"address\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TAddress)\\\\n    self.init(sp.address('tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN'))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals big_map 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (big_map (\\"literals.test.ts\\" 78) ((literal (nat 1) (\\"literals.test.ts\\" 78)) (literal (string \\"WORD1\\") (\\"literals.test.ts\\" 78))) ((literal (nat 2) (\\"literals.test.ts\\" 78)) (literal (string \\"WORD2\\") (\\"literals.test.ts\\" 78))))
            storage_type ((bigmap \\"nat\\" \\"string\\"))
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals big_map 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   (big_map nat string);\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"big_map\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"nat\\"
                        },
                        {
                            \\"prim\\": \\"string\\"
                        }
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TBigMap(sp.TNat, sp.TString))\\\\n    self.init({1 : 'WORD1', 2 : 'WORD2'})\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals bls12_381_fr 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (literal (bls12_381_fr 0x01) (\\"literals.test.ts\\" 78))
            storage_type (\\"bls12_381_fr\\")
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals bls12_381_fr 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   bls12_381_fr;\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"bls12_381_fr\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TBls12_381_fr)\\\\n    self.init(sp.bls12_381_fr('0x01'))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals bls12_381_fr 3`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (literal (bls12_381_fr 1) (\\"literals.test.ts\\" 78))
            storage_type (\\"bls12_381_fr\\")
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals bls12_381_fr 4`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   bls12_381_fr;\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"bls12_381_fr\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TBls12_381_fr)\\\\n    self.init(sp.bls12_381_fr('0x01'))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals bls12_381_g1 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (literal (bls12_381_g1 0x00) (\\"literals.test.ts\\" 78))
            storage_type (\\"bls12_381_g1\\")
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals bls12_381_g1 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   bls12_381_g1;\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"bls12_381_g1\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TBls12_381_g1)\\\\n    self.init(sp.bls12_381_g1('0x00'))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals bls12_381_g2 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (literal (bls12_381_g2 0x00) (\\"literals.test.ts\\" 78))
            storage_type (\\"bls12_381_g2\\")
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals bls12_381_g2 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   bls12_381_g2;\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"bls12_381_g2\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TBls12_381_g2)\\\\n    self.init(sp.bls12_381_g2('0x00'))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals bool 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (literal (bool True) (\\"literals.test.ts\\" 78))
            storage_type (\\"bool\\")
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals bool 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   bool;\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"bool\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TBool)\\\\n    self.init(True)\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals bytes 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (literal (bytes 0x00) (\\"literals.test.ts\\" 78))
            storage_type (\\"bytes\\")
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals bytes 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   bytes;\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"bytes\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TBytes)\\\\n    self.init(sp.bytes('0x00'))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals chain_id 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (literal (chain_id_cst 0x00) (\\"literals.test.ts\\" 78))
            storage_type (\\"chain_id\\")
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals chain_id 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   chain_id;\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"chain_id\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TChainId)\\\\n    self.init(sp.chain_id('0x00'))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals int 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (literal (int 2) (\\"literals.test.ts\\" 78))
            storage_type (\\"int\\")
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals int 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   int;\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"int\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TInt)\\\\n    self.init(2)\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals key 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (literal (key edpku3g7CeTEvSKhxipD4Q2B6EiEP8cR323u8PFmGFgKRVRvCneEmT) (\\"literals.test.ts\\" 78))
            storage_type (\\"key\\")
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals key 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   key;\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"key\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TKey)\\\\n    self.init(sp.key('edpku3g7CeTEvSKhxipD4Q2B6EiEP8cR323u8PFmGFgKRVRvCneEmT'))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals key_hash 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (literal (key_hash tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN) (\\"literals.test.ts\\" 78))
            storage_type (\\"key_hash\\")
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals key_hash 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   key_hash;\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"key_hash\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TKeyHash)\\\\n    self.init(sp.key_hash('tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN'))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals lambda 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (type_annotation (lambda 1 None False \\"lambda_arg\\" (\\"literals.test.ts\\" 78) ((result (lambdaParams 1 \\"lambda_arg\\" (\\"literals.test.ts\\" 78) \\"string\\") (\\"literals.test.ts\\" 78)))) (lambda \\"string\\" (unknown 0)) (\\"literals.test.ts\\" 78))
            storage_type ((lambda \\"string\\" \\"string\\"))
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals lambda 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   (lambda string string);\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"lambda\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"string\\"
                        },
                        {
                            \\"prim\\": \\"string\\"
                        }
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TLambda(sp.TString, sp.TString))\\\\n    self.init(sp.build_lambda(lambda lambda_arg: lambda_arg))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals lambda 3`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (lambda 2 None False \\"lambda_arg\\" (\\"literals.test.ts\\" 78) ((ifBlock (gt (lambdaParams 2 \\"lambda_arg\\" (\\"literals.test.ts\\" 78) (unknown 0)) (literal (nat 2) (\\"literals.test.ts\\" 78)) (\\"literals.test.ts\\" 78)) ((result (literal (string \\"YES\\") (\\"literals.test.ts\\" 78)) (\\"literals.test.ts\\" 78))) (\\"literals.test.ts\\" 78)) (elseBlock ((result (literal (string \\"NO\\") (\\"literals.test.ts\\" 78)) (\\"literals.test.ts\\" 78))))))
            storage_type ((lambda \\"nat\\" \\"string\\"))
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals lambda 4`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   (lambda nat string);\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"lambda\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"nat\\"
                        },
                        {
                            \\"prim\\": \\"string\\"
                        }
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TLambda(sp.TNat, sp.TString))\\\\n    self.init(lambda(sp.TLambda(sp.TNat, sp.TString)))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals list 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (list (\\"literals.test.ts\\" 78) (literal (string \\"HELLO\\") (\\"literals.test.ts\\" 78)) (literal (string \\"WORLD\\") (\\"literals.test.ts\\" 78)))
            storage_type ((list \\"string\\"))
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals list 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   (list string);\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"list\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"string\\"
                        }
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TList(sp.TString))\\\\n    self.init(['HELLO', 'WORLD'])\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals map 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (map (\\"literals.test.ts\\" 78) ((literal (nat 1) (\\"literals.test.ts\\" 78)) (literal (string \\"WORD1\\") (\\"literals.test.ts\\" 78))) ((literal (nat 2) (\\"literals.test.ts\\" 78)) (literal (string \\"WORD2\\") (\\"literals.test.ts\\" 78))))
            storage_type ((map \\"nat\\" \\"string\\"))
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals map 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   (map nat string);\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"map\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"nat\\"
                        },
                        {
                            \\"prim\\": \\"string\\"
                        }
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TMap(sp.TNat, sp.TString))\\\\n    self.init({1 : 'WORD1', 2 : 'WORD2'})\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals mutez 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (literal (mutez 2) (\\"literals.test.ts\\" 78))
            storage_type (\\"mutez\\")
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals mutez 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   mutez;\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"mutez\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TMutez)\\\\n    self.init(sp.mutez(2))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals nat 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (literal (nat 1) (\\"literals.test.ts\\" 78))
            storage_type (\\"nat\\")
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals nat 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   nat;\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"nat\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TNat)\\\\n    self.init(1)\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals none 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (variant \\"None\\" (unit) (\\"literals.test.ts\\" 78))
            storage_type ((option \\"string\\"))
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals none 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   (option string);\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"option\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"string\\"
                        }
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TOption(sp.TString))\\\\n    self.init(sp.none)\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals pair 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (tuple (\\"literals.test.ts\\" 78) (literal (nat 1) (\\"literals.test.ts\\" 78)) (literal (string \\"WORD\\") (\\"literals.test.ts\\" 78)))
            storage_type ((tuple \\"nat\\" \\"string\\"))
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals pair 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   (pair nat string);\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"pair\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"nat\\"
                        },
                        {
                            \\"prim\\": \\"string\\"
                        }
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TPair(sp.TNat, sp.TString))\\\\n    self.init((1, 'WORD'))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals record 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (record (\\"literals.test.ts\\" 78) (field1 (literal (nat 1) (\\"literals.test.ts\\" 78))) (field2 (literal (int 2) (\\"literals.test.ts\\" 78))) (field3 (literal (bytes 0x00) (\\"literals.test.ts\\" 78))))
            storage_type ((record ((field1 \\"nat\\") (field2 \\"int\\") (field3 \\"bytes\\")) (Some (((\\"field1\\") (\\"field2\\")) (\\"field3\\"))) (\\"\\" -1)))
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals record 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   (pair (pair (nat %field1) (int %field2)) (bytes %field3));\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"pair\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"pair\\",
                            \\"args\\": [
                                {
                                    \\"prim\\": \\"nat\\",
                                    \\"annots\\": [
                                        \\"%field1\\"
                                    ]
                                },
                                {
                                    \\"prim\\": \\"int\\",
                                    \\"annots\\": [
                                        \\"%field2\\"
                                    ]
                                }
                            ]
                        },
                        {
                            \\"prim\\": \\"bytes\\",
                            \\"annots\\": [
                                \\"%field3\\"
                            ]
                        }
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TRecord(field1 = sp.TNat, field2 = sp.TInt, field3 = sp.TBytes).layout(((\\\\\\"field1\\\\\\", \\\\\\"field2\\\\\\"), \\\\\\"field3\\\\\\")))\\\\n    self.init(field1 = 1,\\\\n              field2 = 2,\\\\n              field3 = sp.bytes('0x00'))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals sapling_state 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (sapling_empty_state 8 (\\"literals.test.ts\\" 78))
            storage_type ((sapling_state 8))
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals sapling_state 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   (sapling_state 8);\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"sapling_state\\",
                    \\"args\\": [
                        {
                            \\"int\\": \\"8\\"
                        }
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TSaplingState(8))\\\\n    self.init([])\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals set 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (set (\\"literals.test.ts\\" 78) (literal (string \\"HELLO\\") (\\"literals.test.ts\\" 78)) (literal (string \\"WORLD\\") (\\"literals.test.ts\\" 78)))
            storage_type ((set \\"string\\"))
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals set 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   (set string);\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"set\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"string\\"
                        }
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TSet(sp.TString))\\\\n    self.init(sp.set(['HELLO', 'WORLD']))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals signature 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (literal (signature sigsAujsNePapNNGsVotTvcKWMNNJja9B4a2FfAe8vExzFhEgEo1GTQStiif22uSA6iNxPGCGsXsRyeLHzeLbJL2y8CnYuNe) (\\"literals.test.ts\\" 78))
            storage_type (\\"signature\\")
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals signature 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   signature;\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"signature\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TSignature)\\\\n    self.init(sp.signature('sigsAujsNePapNNGsVotTvcKWMNNJja9B4a2FfAe8vExzFhEgEo1GTQStiif22uSA6iNxPGCGsXsRyeLHzeLbJL2y8CnYuNe'))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals some 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (variant \\"Some\\" (literal (string \\"HELLO\\") (\\"literals.test.ts\\" 78)) (\\"literals.test.ts\\" 78))
            storage_type ((option \\"string\\"))
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals some 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   (option string);\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"option\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"string\\"
                        }
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TOption(sp.TString))\\\\n    self.init(sp.some('HELLO'))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals string 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (literal (string \\"TEST STRING\\") (\\"literals.test.ts\\" 78))
            storage_type (\\"string\\")
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals string 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   string;\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"string\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TString)\\\\n    self.init('TEST STRING')\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals timestamp 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (literal (timestamp 100) (\\"literals.test.ts\\" 78))
            storage_type (\\"timestamp\\")
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals timestamp 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   timestamp;\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"timestamp\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TTimestamp)\\\\n    self.init(sp.timestamp(100))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals unit 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (unit)
            storage_type (\\"unit\\")
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals unit 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   unit;\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TUnit)\\\\n    self.init()\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;

exports[`Test Literals variant 1`] = `
"
        (
            template_id (static_id 0 (\\"literals.test.ts\\" 72))
            storage (variant match2 (literal (int 1) (\\"literals.test.ts\\" 78)) (\\"literals.test.ts\\" 78))
            storage_type ((variant ((match1 \\"nat\\") (match2 \\"int\\") (match3 \\"bytes\\")) (Some ((\\"match1\\") ((\\"match2\\") (\\"match3\\")))) (\\"\\" -1)))
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"literals.test.ts\\" 72))
        )
        "
`;

exports[`Test Literals variant 2`] = `
"{
    \\"micheline\\": \\"parameter unit;\\\\nstorage   (or (nat %match1) (or (int %match2) (bytes %match3)));\\\\ncode\\\\n  {\\\\n    CDR;        # @storage\\\\n    NIL operation; # list operation : @storage\\\\n    PAIR;       # pair (list operation) @storage\\\\n  };\\",
    \\"json\\": [
        {
            \\"prim\\": \\"storage\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"or\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"nat\\",
                            \\"annots\\": [
                                \\"%match1\\"
                            ]
                        },
                        {
                            \\"prim\\": \\"or\\",
                            \\"args\\": [
                                {
                                    \\"prim\\": \\"int\\",
                                    \\"annots\\": [
                                        \\"%match2\\"
                                    ]
                                },
                                {
                                    \\"prim\\": \\"bytes\\",
                                    \\"annots\\": [
                                        \\"%match3\\"
                                    ]
                                }
                            ]
                        }
                    ]
                }
            ]
        },
        {
            \\"prim\\": \\"parameter\\",
            \\"args\\": [
                {
                    \\"prim\\": \\"unit\\"
                }
            ]
        },
        {
            \\"prim\\": \\"code\\",
            \\"args\\": [
                [
                    {
                        \\"prim\\": \\"CDR\\"
                    },
                    {
                        \\"prim\\": \\"NIL\\",
                        \\"args\\": [
                            {
                                \\"prim\\": \\"operation\\"
                            }
                        ]
                    },
                    {
                        \\"prim\\": \\"PAIR\\"
                    }
                ]
            ]
        }
    ],
    \\"smartpy\\": \\"import smartpy as sp\\\\n\\\\nclass Contract(sp.Contract):\\\\n  def __init__(self):\\\\n    self.init_type(sp.TVariant(match1 = sp.TNat, match2 = sp.TInt, match3 = sp.TBytes).layout((\\\\\\"match1\\\\\\", (\\\\\\"match2\\\\\\", \\\\\\"match3\\\\\\"))))\\\\n    self.init(match2(1))\\\\n\\\\nsp.add_compilation_target(\\\\\\"visualtez_compilation\\\\\\", Contract())\\"
}"
`;
